[package]
name = "rust-gpu-test"
version = "0.1.0"
edition = "2021"

[build-dependencies]
spirv-builder = "0.4.0-alpha"

[dependencies]
winit = "0.26"
env_logger = "0.9"
log = "0.4"
wgpu = { version = "0.12", features = ["spirv"] }
pollster = "0.2"

[profile.release.build-override]
opt-level = 3
codegen-units = 16
incremental = true